objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_test__c</fullName>
        <label>Account test</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dummy_1__c</fullName>
        <label>Dummy1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Field2_c__c</fullName>
        <label>test Field 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Field__c</fullName>
        <label>Test Field</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>